crates/ic-lint/tests/snapshots/any_type__any_in_alias.snap
---
source: crates/ic-lint/tests/any_type.rs
expression: test_lint_hir(source)
---
! any-type: the 'any' type is not fully supported
  @ test.idl:2:17

 2 │ typedef any AnyType;
   │         ˆˆˆ 'any' type used here
 3 │ 
 4 │ struct Container {

  ? consider using a concrete type
