crates/ic-lint/tests/snapshots/any_type__any_in_array.snap
---
source: crates/ic-lint/tests/any_type.rs
expression: test_lint_hir(source)
---
! any-type: the 'any' type is not fully supported
  @ test.idl:2:17

 2 │ typedef any AnyArray[10];
   │         ˆˆˆ 'any' type used here

  ? consider using a concrete type
