crates/ic-lint/tests/snapshots/any_type__any_in_map.snap
---
source: crates/ic-lint/tests/any_type.rs
expression: test_lint_hir(source)
---
! any-type: the 'any' type is not fully supported
  @ test.idl:2:29

 2 │ typedef map<string, any> Properties;
   │                     ˆˆˆ 'any' type used here

  ? consider using a concrete type
