crates/ic-lint/tests/snapshots/any_type__any_in_struct_member.snap
---
source: crates/ic-lint/tests/any_type.rs
expression: test_lint_hir(source)
---
! any-type: the 'any' type is not fully supported
  @ test.idl:3:13

 2 │ struct Message {
 3 │     any payload;
   │     ˆˆˆ 'any' type used here
 4 │     string id;
 5 │ };

  ? consider using a concrete type
