crates/ic-lint/tests/snapshots/any_type__any_in_union_variant.snap
---
source: crates/ic-lint/tests/any_type.rs
expression: test_lint_hir(source)
---
! any-type: the 'any' type is not fully supported
  @ test.idl:6:13

 4 │     string text;
 5 │ case 1:
 6 │     any value;
   │     ˆˆˆ 'any' type used here
 7 │ default:
 8 │     double number;

  ? consider using a concrete type
