crates/ic-lint/tests/snapshots/any_type__no_any_type.snap
---
source: crates/ic-lint/tests/any_type.rs
assertion_line: 137
expression: test_lint_hir(source)
---

